# amy-bench

./: AMY-EDITS.md  README.md
esp32s3/: .gitignore  CLAUDE.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.lto
esp32s3/components/amy/: CMakeLists.txt
esp32s3/components/pie_dsp/: CMakeLists.txt
esp32s3/components/pie_dsp/include/: pie_dsp.h  pie_dsp_platform.h
esp32s3/components/pie_dsp/src/: pie_dsp.c  pie_kernels_s3.S  pie_memcpy_s3.S  pie_memset_s3.S
esp32s3/main/: CMakeLists.txt  Kconfig.projbuild  bench_main.c  idf_component.yml  metrics.c  metrics.h  render_clock.c  render_clock.h  scenes.c  scenes.h  serial_proto.c  serial_proto.h
tools/: .gitignore  abcompare.py  abreport.py  abrun.py  capture.py  schema.md
tools/build-patches/: espressif__cmake_utilities-gcc.cmake
